# djangochannelrestframework-oauth2-test

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
settings/utils/: env.py
