[project]
name = "djangochannelrestframework-oauth2-test"
version = "0.1.0"
description = "This project is to test djangochannelrestframework with Oauth2 Authz"
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "django-typer>=3.1.1",
    "django>=5.2.1",
    "django-environ>=0.12.0",
    "psycopg2-binary>=2.9.10",
    "django-redis>=5.4.0",
    "ipython>=9.2.0",
    "ipdb>=0.13.13",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "django-upgrade>=1.25.0",
    "factory-boy>=3.3.3",
    "pre-commit>=4.2.0",
    "rich>=14.0.0",
]
